# grandorgue

./: .clang-format  .copyright-updater.yaml  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  AUTHORS  BUILD.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  Emails from KM about MO.txt  GOrgueControl.cpp  GOrgueControl.h  GOrgueCoupler.cpp  GOrgueCoupler.h  GOrgueDisplayMetrics.cpp  GOrgueDisplayMetrics.h  GOrgueDivisional.cpp  GOrgueDivisional.h  GOrgueDivisionalCoupler.cpp  GOrgueDivisionalCoupler.h  GOrgueDrawStop.cpp  GOrgueDrawStop.h  GOrgueDrawable.h  GOrgueEnclosure.cpp  GOrgueEnclosure.h  GOrgueFrameGeneral.cpp  GOrgueFrameGeneral.h  GOrgueGeneral.cpp  GOrgueGeneral.h  GOrgueLCD.cpp  GOrgueLCD.h  GOrgueLabel.cpp  GOrgueLabel.h  GOrgueManual.cpp  GOrgueManual.h  GOrgueMeter.cpp  GOrgueMeter.h  GOrgueMidi.cpp  (+122 more)
demo/: CMakeLists.txt  demo.organ
perftests/: CMakeLists.txt
resources/: CMakeLists.txt  GrandOrgue.appdata.xml  GrandOrgue.appdata.xml.in  GrandOrgue.desktop.in  GrandOrgue.rc  GrandOrgueMan.xml  GrandOrguePerfTestMan.xml  GrandOrgueToolMan.xml  grandorgue.xml  man.xml
sounds/: CMakeLists.txt
sounds/metronome/: beat.wv  click-beat.wv  click-first-beat.wv  first_beat.wv
src/core/: CMakeLists.txt  GOAlloc.h  GOArchive.h  GOArchiveCreator.cpp  GOArchiveEntryFile.cpp  GOArchiveEntryFile.h  GOArchiveFile.cpp  GOArchiveIndex.cpp  GOArchiveManager.cpp  GOArchiveWriter.cpp  GOBitmap.cpp  GOBitmap.h  GOBool3.h  GOBuffer.h  GOCacheObject.h  GOChoice.h  GOCompress.cpp  GOCompress.h  GOConfigFileReader.cpp  GOConfigReader.cpp  GOConfigReaderDB.cpp  GOConfigWriter.cpp  GOControlChangedHandler.h  GODC.cpp  GODC.h  GODocumentBase.cpp  GODocumentBase.h  GOEvent.cpp  GOEvent.h  GOEventDistributor.cpp  GOEventDistributor.h  GOEventHandler.h  GOFile.h  GOFont.cpp  GOFont.h  GOGUIMouseState.h  GOGUIMouseStateTracker.h  GOGUIPanelCreator.h  GOGZipFormat.h  GOHash.cpp  (+254 more)
src/core/archive/: GOArchive.cpp  GOArchive.h  GOArchiveCreator.cpp  GOArchiveCreator.h  GOArchiveEntryFile.cpp  GOArchiveEntryFile.h  GOArchiveFile.cpp  GOArchiveFile.h  GOArchiveIndex.cpp  GOArchiveIndex.h  GOArchiveManager.cpp  GOArchiveManager.h  GOArchiveReader.cpp  GOArchiveReader.h  GOArchiveWriter.cpp  GOArchiveWriter.h
src/core/config/: GOConfigEnum.cpp  GOConfigEnum.h  GOConfigFileReader.cpp  GOConfigFileReader.h  GOConfigFileWriter.cpp  GOConfigFileWriter.h  GOConfigReader.cpp  GOConfigReader.h  GOConfigReaderDB.cpp  GOConfigReaderDB.h  GOConfigWriter.cpp  GOConfigWriter.h  GOLogicalColour.h
src/core/contrib/: sha1.cpp  sha1.h
src/core/files/: GOInvalidFile.cpp  GOInvalidFile.h  GOOpenedFile.h  GOStandardFile.cpp  GOStandardFile.h  GOStdFileName.cpp  GOStdFileName.h
src/core/gui/: GOGUIMouseState.h  GOGUIMouseStateTracker.h  GOGUIPanelCreator.h
src/core/midi/: GOMidiCallback.h  GOMidiConfigurator.h  GOMidiEvent.cpp  GOMidiEvent.h  GOMidiEventPattern.cpp  GOMidiEventPattern.h  GOMidiEventPatternList.h  GOMidiFile.h  GOMidiFileReader.cpp  GOMidiFileReader.h  GOMidiMap.cpp  GOMidiMap.h  GOMidiMerger.cpp  GOMidiMerger.h  GOMidiPlayerContent.cpp  GOMidiReceiverBase.cpp  GOMidiReceiverBase.h  GOMidiReceiverData.cpp  GOMidiReceiverData.h  GOMidiReceiverEvent.cpp  GOMidiReceiverEvent.h  GOMidiReceiverEventPattern.cpp  GOMidiReceiverEventPattern.h  GOMidiReceiverEventPatternList.cpp  GOMidiReceiverEventPatternList.h  GOMidiReceiverMessageType.h  GOMidiSenderData.cpp  GOMidiSenderData.h  GOMidiSenderEventPattern.h  GOMidiSenderEventPatternList.cpp  GOMidiSenderEventPatternList.h  GOMidiSenderMessageType.h  GOMidiWXEvent.cpp  GOMidiWXEvent.h  MIDIList.cpp  MIDIList.h
src/core/settings/: GOSetting.cpp  GOSetting.h  GOSettingBool.cpp  GOSettingBool.h  GOSettingDirectory.cpp  GOSettingDirectory.h  GOSettingEnum.cpp  GOSettingEnum.h  GOSettingFile.cpp  GOSettingFile.h  GOSettingFloat.cpp  GOSettingFloat.h  GOSettingNumber.cpp  GOSettingNumber.h  GOSettingStore.cpp  GOSettingStore.h  GOSettingString.cpp  GOSettingString.h
src/core/temperaments/: GOTemperament.cpp  GOTemperament.h  GOTemperamentCent.cpp  GOTemperamentCent.h  GOTemperamentList.cpp  GOTemperamentList.h  GOTemperamentUser.cpp  GOTemperamentUser.h
src/core/threading/: GOCondition.cpp  GOCondition.h  GOMultiMutexLocker.h  GOMutex.cpp  GOMutex.h  GOMutexLocker.cpp  GOMutexLocker.h  GOStackPrinter.h  GOThread.cpp  GOThread.h  GOWaitQueue.cpp  GOWaitQueue.h  GOrgueThread.cpp  GOrgueThread.h  atomic.h  threading_impl.cpp  threading_impl.h
src/fftw/: CMakeLists.txt  config.h
src/fftw/src/: ChangeLog  Makefile.in  aclocal.m4  config.h.in  configure
src/grandorgue/: CMakeImages.txt  CMakeLists.txt  CMakeWxBundle.txt  CMakeWxWidgetsInclude.txt  GOApp.cpp  GOApp.h  GOAudioGauge.cpp  GOAudioGauge.h  GOAudioRecorder.cpp  GOAudioRecorder.h  GOBitmap.cpp  GOBitmap.h  GOBitmapCache.cpp  GOBitmapCache.h  GOButton.cpp  GOButton.h  GOCache.cpp  GOCache.h  GOCacheCleaner.cpp  GOCacheCleaner.h  GOCacheWriter.cpp  GOCacheWriter.h  GOCombination.cpp  GOCombination.h  GOCombinationDefinition.cpp  GOCombinationDefinition.h  GOCombinationElement.h  GOCoupler.cpp  GOCoupler.h  GODC.cpp  GODC.h  GODefinitionFile.cpp  GODefinitionFile.h  GODivisional.cpp  GODivisional.h  GODivisionalCoupler.cpp  GODivisionalCoupler.h  GODocument.cpp  GODocument.h  GODrawStop.cpp  (+552 more)
src/grandorgue/combinations/: GODivisionalSetter.cpp  GODivisionalSetter.h  GOSetter.cpp  GOSetter.h
src/grandorgue/config/: GOAudioDeviceConfig.cpp  GOConfig.cpp  (+18 more)
src/images/: CMakeLists.txt
src/portaudio/: CMakeLists.txt  pa_errors.cpp
src/rt/: CMakeLists.txt
src/tests/: CMakeLists.txt  GOTest.cpp  GOTest.h  GOTestCollection.cpp  GOTestCollection.h  GOTestException.h  GOTestExe.cpp  GOTestLib.cpp  GOTestOrganModel.cpp  GOTestOrganModel.h  GOTestResult.cpp  GOTestResult.h  GOTestResultCollection.cpp  GOTestResultCollection.h  GOTestSwitch.cpp  GOTestSwitch.h  GOTestWindchest.cpp  GOTestWindchest.h  README.md
src/tools/: CMakeLists.txt  GOPerfTest.cpp  GOTool.cpp  GOTool.h  perftest.cpp
src/wavpack/: CMakeLists.txt
src/wxMaterial/: CMakeLists.txt
tests/model/: CMakeLists.txt
(+2402 files in other folders)
